desktop-pwas: Ignore same-document navigations when retrieving icons

Some pages could perform same-document navigations e.g. push/popState
while we download icon. Since these navigations are still in the same
document it should be safe to ignore them and continue with the
installation.

Changes WebAppIconDownloader to ignore same-document navigations and
continue downloading the icons.

Bug: 889660
Change-Id: I120ba6f38a5aa0a803fa82615cd8bd73412bbb67
Reviewed-on: https://chromium-review.googlesource.com/c/1287330
Commit-Queue: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600652}