chrome/browser/web_applications/components/web_app_icon_downloader.cc
@@ -125,7 +125,8 @@ void WebAppIconDownloader::DidDownloadFavicon(
 // content::WebContentsObserver overrides:
 void WebAppIconDownloader::DidFinishNavigation(
     content::NavigationHandle* navigation_handle) {
-  if (!navigation_handle->IsInMainFrame() || !navigation_handle->HasCommitted())
+  if (!navigation_handle->IsInMainFrame() ||
+      !navigation_handle->HasCommitted() || navigation_handle->IsSameDocument())
     return;
 
   // Clear all pending requests.
